refactor(AppointmentOptionSorter) : 정렬 로직 추가 - 항상 일관된 값을 가져오도록 변경 - 정렬 기준은 priority와 동일 조건일 때 startTime이 가장 빠른 순서대로 가져오도록 함